--- a/frontend/src/app/modules/task/components/modals/new-user-modal/new-user-modal.component.html
+++ b/frontend/src/app/modules/task/components/modals/new-user-modal/new-user-modal.component.html
@@ -8,29 +8,29 @@
   <form [formGroup]="newUserForm">
     <div class="form-group">
       <label>First Name</label>
-      <input class="form-control" formControlName="firstName" [ngClass]="{'is-invalid': f.firstName.errors }"/>
-      <div *ngIf="f.firstName.errors" class="invalid-feedback">
+      <input class="form-control" formControlName="firstName" [ngClass]="{'is-invalid': submmited && f.firstName.errors }"/>
+      <div *ngIf="submmited && f.firstName.errors" class="invalid-feedback">
         <div *ngIf="f.firstName.errors.required">>>required</div>
       </div>
     </div>
     <div class="form-group">
       <label>Last Name</label>
-      <input class="form-control" formControlName="lastName" [ngClass]="{'is-invalid': f.lastName.errors }"/>
-      <div *ngIf="f.lastName.errors" class="invalid-feedback">
+      <input class="form-control" formControlName="lastName" [ngClass]="{'is-invalid': submmited && f.lastName.errors }"/>
+      <div *ngIf="submmited && f.lastName.errors" class="invalid-feedback">
           <div *ngIf="f.lastName.errors.required">>>required</div>
       </div>
     </div>
     <div class="form-group">
       <label>Login</label>
-      <input class="form-control" formControlName="login" [ngClass]="{'is-invalid': f.login.errors }"/>
-      <div *ngIf="f.login.errors" class="invalid-feedback">
+      <input class="form-control" formControlName="login" [ngClass]="{'is-invalid': submmited && f.login.errors }"/>
+      <div *ngIf="submmited && f.login.errors" class="invalid-feedback">
           <div *ngIf="f.login.errors.required">>>required</div>
       </div>
     </div>
     <div class="form-group">
       <label>Password</label>
-      <input type="password" class="form-control" formControlName="password" [ngClass]="{'is-invalid': f.password.errors }"/>
-      <div *ngIf="f.password.errors" class="invalid-feedback">
+      <input type="password" class="form-control" formControlName="password" [ngClass]="{'is-invalid': submmited && f.password.errors }"/>
+      <div *ngIf="submmited && f.password.errors" class="invalid-feedback">
           <div *ngIf="f.password.errors.required">>>required</div>
           <div *ngIf="f.password.errors.minlength">must be a least 6 characters</div>          
       </div>     
@@ -46,6 +46,6 @@
   </form>
 </div>
 <div class="modal-footer">
-    <div class="btn btn btn-primary">Save</div>
+    <div class="btn btn btn-primary" (click)="_onSubmit()">Save</div>
     <div class="btn btn-danger" (click)="modalRef.hide()">Close</div>
 </div>
