--- a/frontend/src/app/modules/task/components/table/tasks.component.html
+++ b/frontend/src/app/modules/task/components/table/tasks.component.html
@@ -6,9 +6,12 @@
 				    <a href="#" class="btn btn-primary"><span>New Task</span></a>
             <a href="#" class="btn btn-primary" (click)="_openProjectModal()"><span>New Project</span></a>           					
         </div>       
-        <div class="col-sm-5">
-						<h2>Task <b>Manager</b></h2>
-				</div>				
+        <div class="col-sm-3">                      
+            <h2>User <b>{{currentUser.username}}</b></h2>                    
+        </div>	
+        <div class="col-sm-2 justify-content-end">
+            <a href="#" class="btn btn-primary" (click)="logOut()"><span>Logout</span></a>   
+        </div>			
     </div>
   </div>
   <table class="table table-hover">
@@ -62,8 +65,6 @@
           </tr>
       </tbody>
   </table>
-  <a href="#" class="btn btn-primary" (click)="logOut()"><span>Logout</span></a>
- 
 </div>
 
 
