--- a/frontend/src/app/modules/project/components/new-project-modal/new-project-modal.component.html
+++ b/frontend/src/app/modules/project/components/new-project-modal/new-project-modal.component.html
@@ -8,14 +8,14 @@
   <form [formGroup]="newProjectForm">
     <div class="form-group">
       <label>Project Code</label>
-      <input class="form-control" formControlName="projectCode" [ngClass]="{'is-invalid': submmited && f.projectCode.errors }"/>
+      <input class="form-control" formControlName="projectCode" [(ngModel)]="project.projectCode" [ngClass]="{'is-invalid': submmited && f.projectCode.errors }"/>
       <div *ngIf="submmited && f.projectCode.errors" class="invalid-feedback">
         <div *ngIf="f.projectCode.errors.required">>>required</div>
       </div>
     </div>
     <div class="form-group">
       <label>Summary</label>
-      <textarea class="form-control" formControlName="summary" [ngClass]="{'is-invalid': submmited && f.summary.errors }"></textarea>
+      <textarea class="form-control" formControlName="summary" [(ngModel)]="project.summary" [ngClass]="{'is-invalid': submmited && f.summary.errors }"></textarea>
       <div *ngIf="submmited && f.summary.errors" class="invalid-feedback">
           <div *ngIf="f.summary.errors.required">>>required</div>
       </div>
@@ -23,7 +23,7 @@
   </form>
 </div>
 <div class="modal-footer">
-  <div class="btn btn btn-primary">Save</div>
+  <div class="btn btn btn-primary" (click)="_onSubmit()">Save</div>
   <div class="btn btn-danger" (click)="modalRef.hide()">Close</div>
 </div>
 
