--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,24 @@
-<router-outlet></router-outlet>
+<div class="container">
+
+    <div class="row">
+        <div class="col">
+            <app-header></app-header>
+        </div>
+    </div>
+
+    <hr>
+    <div class="row " style="height: 80vh;">
+        <div class="container-fluid">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+
+    <hr style="margin-bottom: 0;">
+    <div class="row">
+        <div class="col">
+            <app-footer></app-footer>
+        </div>
+    </div>
+    
+</div>
+
