--- a/frontend/src/app/modules/layout/home/home.component.html
+++ b/frontend/src/app/modules/layout/home/home.component.html
@@ -1,4 +1,17 @@
-<div class="container">
+<div class="containter">
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link active" href="#">Projects</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Users</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Tasks</a>
+    </li>
+  </ul>
   <app-tasks></app-tasks>
 </div>
+
+
                                                                                                                                    
