--- a/frontend/src/app/modules/task/components/task-detail/task-detail.component.html
+++ b/frontend/src/app/modules/task/components/task-detail/task-detail.component.html
@@ -1,3 +1,8 @@
-<p>
-  task-detail works!
-</p>
+<div class="container" *ngIf="ready">
+  <p>
+    {{task.description}}
+   
+  </p>
+  <div class="btn btn btn-primary" (click)="_inProgressClick()">In progress</div>
+  
+</div>
