--- a/frontend/src/app/modules/task/components/table/tasks.component.less
+++ b/frontend/src/app/modules/task/components/table/tasks.component.less
@@ -14,11 +14,13 @@
     table{
         font-size: 0.8rem;
         td{
+            padding: 0.1rem;
             vertical-align: middle;
         }
         td:first-child{
             border-right-style: solid; /* Стиль линии */
             border-right-width: 1px; 
+            width: 60px;
         }
         td:last-child{
             border-left-style: solid; /* Стиль линии */
