--- a/frontend/src/app/modules/user/components/users/users.component.less
+++ b/frontend/src/app/modules/user/components/users/users.component.less
@@ -8,7 +8,15 @@
 
 table{
     td{
-        padding: .65rem;
+        vertical-align: middle;
+        padding: .1rem;
     }
-    
+    td:first-child{
+        border-right-style: solid; /* Стиль линии */
+        border-right-width: 1px; 
+    }
+    td:last-child{
+        border-left-style: solid; /* Стиль линии */
+        border-left-width: 1px; 
+    }     
 }
