--- a/frontend/src/app/modules/layout/login/login.component.html
+++ b/frontend/src/app/modules/layout/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-md-6 mx-auto">
+<div class="row align-items-center h-100">
+  <div class="col-md-6 mx-auto ">
     <div class="card-header bg-danger text-white">
       <h4>Login</h4>
     </div>
