--- a/frontend/src/app/modules/project/components/projects-table/projects-table.component.html
+++ b/frontend/src/app/modules/project/components/projects-table/projects-table.component.html
@@ -11,7 +11,7 @@
       <tr>
         <td>ID</td>
         <td>Project Code</td>        
-        <td>Summary</td>
+        <td>Name</td>
         <td>Manager</td>       
         <td>Action</td>
       </tr>     
@@ -20,7 +20,7 @@
       <tr *ngFor="let project of projects | async">
         <td class="align-middle">{{project.id}}</td>
         <td class="align-middle"><a [routerLink]="['/project-details', project.id]">{{project.projectCode}}</a></td>
-        <td class="align-middle">{{project.summary}}</td>
+        <td class="align-middle">{{project.name}}</td>
         <td class="align-middle">{{project.manager}}</td>                  
         <td class="align-middle"> 
           <button type="button" class="btn btn-success " (click)="_deleteProject(project.id)">Delete</button>              
