--- a/frontend/src/app/modules/task/components/new-task-modal/new-task-modal.component.html
+++ b/frontend/src/app/modules/task/components/new-task-modal/new-task-modal.component.html
@@ -48,7 +48,7 @@
       <div class="form-group">
         <label for="inputState">Assignee</label>
         <select class="form-control" formControlName="assignee">
-          <option *ngFor="let user of users | async" [value]="user.username">{{user.username}}</option>
+          <option *ngFor="let user of users" [value]="user.username">{{user.username}}</option>
           
         </select>
       </div>
