--- a/frontend/src/app/modules/user/components/new-user-modal/new-user-modal.component.html
+++ b/frontend/src/app/modules/user/components/new-user-modal/new-user-modal.component.html
@@ -5,7 +5,7 @@
   </button>
 </div>
 <div class="modal-body">
-  <form [formGroup]="newUserForm">
+  <form [formGroup]="form">
     <div class="form-group">
       <label>First Name</label>
       <input class="form-control" formControlName="firstName"   [(ngModel)]="editableUser.firstName" [ngClass]="{'is-invalid': submmited && f.firstName.errors }"/>
@@ -25,6 +25,7 @@
         <input class="form-control" formControlName="email"  [(ngModel)]="editableUser.email" [ngClass]="{'is-invalid': submmited && f.email.errors }"/>
         <div *ngIf="submmited && f.email.errors" class="invalid-feedback">
             <div *ngIf="f.email.errors.required">>>required</div>
+            <div *ngIf="f.email.errors.email">>>email</div>
         </div>
       </div>
     <div class="form-group">
