--- a/frontend/src/app/modules/user/components/users-on-the-project-table/users-on-the-project-table.component.html
+++ b/frontend/src/app/modules/user/components/users-on-the-project-table/users-on-the-project-table.component.html
@@ -18,7 +18,7 @@
         </tr>     
       </thead>
       <tbody>
-        <tr *ngFor="let user of users | async">
+        <tr *ngFor="let user of users">
             <td class="align-middle">{{user.id}}</td>
             <td class="align-middle">{{user.username}}</td>
             <td class="align-middle">{{user.firstName}}</td>
