--- a/frontend/src/app/modules/layout/home/home.component.html
+++ b/frontend/src/app/modules/layout/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="containter">
+<div class="home container">
   <tabset>
     <tab heading="Tasks">
       <app-tasks></app-tasks>
@@ -9,8 +9,10 @@
     <tab  *ngIf="isProjectManager" heading="Projects">
       <app-projects-table></app-projects-table>
     </tab>
-  </tabset>  
+  </tabset>
 </div>
+    
+
 
 
                                                                                                                                    
