--- a/frontend/src/app/modules/project/components/projects-table/projects-table.component.less
+++ b/frontend/src/app/modules/project/components/projects-table/projects-table.component.less
@@ -16,6 +16,7 @@
         font-size: 1rem;
         td{
             vertical-align: middle;
+            padding: .1rem;
         }
         td:first-child{
             border-right-style: solid; /* Стиль линии */
@@ -24,6 +25,7 @@
         td:last-child{
             border-left-style: solid; /* Стиль линии */
             border-left-width: 1px; 
-        }        
+        }  
+              
     }
 }
