--- a/frontend/src/app/modules/task/components/task-detail/task-detail.component.less
+++ b/frontend/src/app/modules/task/components/task-detail/task-detail.component.less
@@ -23,9 +23,7 @@ hr {
     margin: 0;
 }
 
-.card{
-    height: 70vh;
-}
+
 
 .pb-cmnt-container {
     font-family: Lato;
@@ -49,4 +47,18 @@ hr {
 .media {
     border-bottom:1px dashed black;
     margin-bottom:25px;
+}
+
+.container{   
+    border: 1px solid red; 
+    min-height: 70%;
+    overflow-y:scroll;
+}
+.conetnt{
+    min-height: 100%;
+    height: 100%;
+}
+
+.task-header{
+    margin: 1rem 0rem;
 }
