--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,24 +1,12 @@
-<div class="container">
+<header>
+  <app-header></app-header>
+</header>
 
-    <div class="row">
-        <div class="col">
-            <app-header></app-header>
-        </div>
-    </div>
+<main style="min-height: 90vh;  border: 1px;
+border-style: solid;">
+  <router-outlet></router-outlet>
+</main>
 
-    <hr>
-    <div class="row " style="height: 80vh;">
-        <div class="container-fluid">
-            <router-outlet></router-outlet>
-        </div>
-    </div>
-
-    <hr style="margin-bottom: 0;">
-    <div class="row">
-        <div class="col">
-            <app-footer></app-footer>
-        </div>
-    </div>
-    
-</div>
-
+<footer>
+  <app-footer></app-footer>
+</footer>
