--- a/frontend/src/app/modules/layout/header/header.component.html
+++ b/frontend/src/app/modules/layout/header/header.component.html
@@ -1,17 +1,15 @@
-<div class="navbar p-1 bg-dark text-white">
-    <h1>Task <b>Manager</b></h1>
-    <div *ngIf="isLoggedTest()"  class="btn-group" dropdown>
-        <a dropdownToggle class="dropdown-toggle"  href="javascript:void(0);" aria-controls="dropdown-alignment">
-          {{username}}<span class="caret"></span>
-        </a>
-        
-        <ul id="dropdown-alignment" *dropdownMenu class="dropdown-menu dropdown-menu-right"
-        role="menu" aria-labelledby="button-alignment">
-          <li role="menuitem"><a class="dropdown-item" href="#">Edit profile</a></li>
-          <li role="menuitem"><a class="dropdown-item" href="#">Dashboard</a></li>          
-          <li class="divider dropdown-divider"></li>
-          <li role="menuitem"><a class="dropdown-item" href="#" (click)="logOut()">Logout</a>
-          </li>
-        </ul>
-    </div>    
+<div class="navbar">
+  <div>Task <b>Manager</b></div>
+  <div *ngIf="isLoggedTest()" class="btn-group" dropdown>
+    <a dropdownToggle class="dropdown-toggle a" href="javascript:void(0);" aria-controls="dropdown-alignment">
+      {{username}}<span class="caret"></span>
+    </a>
+    <ul id="dropdown-alignment" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="button-alignment">
+      <li role="menuitem"><a class="dropdown-item" href="#">Edit profile</a></li>
+      <li role="menuitem"><a class="dropdown-item" href="#">Dashboard</a></li>
+      <li class="divider dropdown-divider"></li>
+      <li role="menuitem"><a class="dropdown-item" href="#" (click)="logOut()">Logout</a>
+      </li>
+    </ul>
+  </div>
 </div>
