add file size pipe

--- a/frontend/src/app/modules/task/components/table/tasks.component.less
+++ b/frontend/src/app/modules/task/components/table/tasks.component.less
@@ -22,8 +22,10 @@
             width: 60px;
         } 
 
-        tr:hover{
-            border: 3px solid paleturquoise;
+        tbody {
+            tr:hover{
+            border: 3px solid #428bca;
+            }
         }      
     }
 }
