--- a/frontend/src/app/modules/file/component/add-file-modal/add-file-modal.component.html
+++ b/frontend/src/app/modules/file/component/add-file-modal/add-file-modal.component.html
@@ -1,19 +1,28 @@
+<div class="modal-header">
+  <h4 class="modal-title pull-left">Add attachments</h4>
+  <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 <div class="modal-body">
-    <file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)" 
-    (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
-        <span>drop file here</span>
-    </file-drop>
-</div>
-<div class="upload-table">
-    <table class="table">       
-        <tbody class="upload-name-style">
-            <tr *ngFor="let item of files; let i=index">
-               
-            </tr>
-        </tbody>
+  <file-drop (onFileDrop)="dropped($event)" (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
+    <span>Drag and drop your files</span>
+  </file-drop>
+  <div class="upload-table">
+    <table class="table">
+      <tbody class="upload-name-style">
+        <tr *ngFor="let item of files; let i=index">
+          <td>{{item.name}}</td>
+          <td>{{item.size | fileSize}} </td>
+          <td><button class="btn btn-danger btn-sm" (click)="_removeFile(i)">Remove</button></td>          
+        </tr>
+
+      </tbody>
     </table>
+  </div>
 </div>
+
 <div class="modal-footer">
-  <div class="btn btn btn-primary" (click)="_onSubmit()">Save</div>
+  <div class="btn btn btn-primary" (click)="_addFiles()">Save</div>
   <div class="btn btn-danger" (click)="modalRef.hide()">Close</div>
 </div>
